--- a/.github/workflows/vite.yml
+++ b/.github/workflows/vite.yml
@@ -1,4 +1,3 @@
-# Simple workflow for deploying static content to GitHub Pages
 name: Deploy static content to Pages
 
 on:
@@ -30,22 +29,30 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
-      - name: Set up Node
-        uses: actions/setup-node@v4
+
+      # Set up Bun instead of Node.js
+      - name: Set up Bun
+        uses: oven-sh/setup-bun@v1
         with:
-          node-version: 20
-          cache: 'npm'
+          bun-version: latest
+
+      # Install dependencies using Bun
       - name: Install dependencies
-        run: npm ci
+        run: bun install --frozen-lockfile
+
+      # Build the project using Bun (Vite should be run using `bun run build`)
       - name: Build
-        run: npm run build
+        run: bun run build
+
       - name: Setup Pages
         uses: actions/configure-pages@v4
+
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
-          # Upload dist folder
+          # Upload dist folder (Vite's build output)
           path: './dist'
+
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v4
