--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "syllabusshare",
+  "homepage": "http://Leado123.github.io/",
   "private": true,
   "version": "0.0.0",
   "type": "module",
