--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "graphql": "^16.10.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-fast-marquee": "^1.6.5",
     "tailwindcss": "^3.4.17"
   },
   "devDependencies": {
