--- a/package.json
+++ b/package.json
@@ -21,8 +21,10 @@
     "gh-pages": "^6.3.0",
     "graphql": "^16.10.0",
     "react": "^18.3.1",
+    "react-doc-viewer": "^0.1.14",
     "react-dom": "^18.3.1",
     "react-fast-marquee": "^1.6.5",
+    "react-router-dom": "^7.1.3",
     "tailwindcss": "^3.4.17"
   },
   "devDependencies": {
