--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "gh-pages": "^6.3.0",
     "graphql": "^16.10.0",
     "react": "^18.3.1",
+    "react-datasheet-grid": "^4.11.5",
     "react-doc-viewer": "^0.1.14",
     "react-dom": "^18.3.1",
     "react-fast-marquee": "^1.6.5",
