--- a/package.json
+++ b/package.json
@@ -16,17 +16,21 @@
     "@apollo/client": "^3.12.6",
     "@nextui-org/select": "^2.4.9",
     "@react-pdf/renderer": "^4.2.1",
+    "@types/mime-types": "^2.1.4",
     "autoprefixer": "^10.4.20",
     "flowbite": "^2.5.2",
     "flowbite-react": "^0.10.2",
     "gh-pages": "^6.3.0",
     "graphql": "^16.10.0",
+    "mime-types": "^2.1.35",
     "react": "^18.3.1",
     "react-datasheet-grid": "^4.11.5",
     "react-doc-viewer": "^0.1.14",
     "react-dom": "^18.3.1",
     "react-fast-marquee": "^1.6.5",
+    "react-pro-sidebar": "^1.1.0",
     "react-router-dom": "^7.1.3",
+    "react-select": "^5.10.0",
     "tailwindcss": "^3.4.17"
   },
   "devDependencies": {
