--- a/package.json
+++ b/package.json
@@ -17,13 +17,19 @@
     "@nextui-org/select": "^2.4.9",
     "@react-pdf/renderer": "^4.2.1",
     "@types/mime-types": "^2.1.4",
+    "@types/react-autocomplete": "^1.8.11",
+    "@types/react-autosuggest": "^10.1.11",
+    "accessible-autocomplete": "^3.0.1",
     "autoprefixer": "^10.4.20",
+    "autosuggest": "^0.0.2",
     "flowbite": "^2.5.2",
     "flowbite-react": "^0.10.2",
     "gh-pages": "^6.3.0",
     "graphql": "^16.10.0",
     "mime-types": "^2.1.35",
     "react": "^18.3.1",
+    "react-autocomplete": "^1.8.1",
+    "react-autosuggest": "^10.1.0",
     "react-datasheet-grid": "^4.11.5",
     "react-doc-viewer": "^0.1.14",
     "react-dom": "^18.3.1",
@@ -31,6 +37,7 @@
     "react-pro-sidebar": "^1.1.0",
     "react-router-dom": "^7.1.3",
     "react-select": "^5.10.0",
+    "react-tabs": "^6.1.0",
     "tailwindcss": "^3.4.17"
   },
   "devDependencies": {
