--- a/package.json
+++ b/package.json
@@ -17,16 +17,20 @@
     "@nextui-org/select": "^2.4.9",
     "@react-pdf/renderer": "^4.2.1",
     "@types/mime-types": "^2.1.4",
+    "@types/pdf-viewer-reactjs": "^2.2.5",
     "@types/react-autocomplete": "^1.8.11",
     "@types/react-autosuggest": "^10.1.11",
     "accessible-autocomplete": "^3.0.1",
     "autoprefixer": "^10.4.20",
     "autosuggest": "^0.0.2",
+    "document-viewer-ts": "^1.0.0-legacy",
     "flowbite": "^2.5.2",
     "flowbite-react": "^0.10.2",
     "gh-pages": "^6.3.0",
     "graphql": "^16.10.0",
+    "is-mobile": "^5.0.0",
     "mime-types": "^2.1.35",
+    "pdf-viewer-reactjs": "^2.2.3",
     "react": "^18.3.1",
     "react-autocomplete": "^1.8.1",
     "react-autosuggest": "^10.1.0",
@@ -38,6 +42,7 @@
     "react-router-dom": "^7.1.3",
     "react-select": "^5.10.0",
     "react-tabs": "^6.1.0",
+    "srpv-js": "^1.0.16",
     "tailwindcss": "^3.4.17"
   },
   "devDependencies": {
