--- a/package.json
+++ b/package.json
@@ -14,11 +14,13 @@
   },
   "dependencies": {
     "@apollo/client": "^3.12.6",
+    "@mdxeditor/editor": "^3.25.1",
+    "@million/lint": "latest",
     "@nextui-org/select": "^2.4.9",
     "@react-pdf/renderer": "^4.2.1",
+    "@syncfusion/ej2-react-pdfviewer": "^28.2.9",
     "@types/mime-types": "^2.1.4",
     "@types/pdf-viewer-reactjs": "^2.2.5",
-    "@types/react-autocomplete": "^1.8.11",
     "@types/react-autosuggest": "^10.1.11",
     "accessible-autocomplete": "^3.0.1",
     "autoprefixer": "^10.4.20",
@@ -26,22 +28,28 @@
     "document-viewer-ts": "^1.0.0-legacy",
     "flowbite": "^2.5.2",
     "flowbite-react": "^0.10.2",
+    "g4f": "^1.4.6",
     "gh-pages": "^6.3.0",
     "graphql": "^16.10.0",
     "is-mobile": "^5.0.0",
+    "million": "^3.1.11",
     "mime-types": "^2.1.35",
     "pdf-viewer-reactjs": "^2.2.3",
+    "pdf2json": "^3.1.5",
+    "quill-markdown": "^2.1.2",
     "react": "^18.3.1",
-    "react-autocomplete": "^1.8.1",
     "react-autosuggest": "^10.1.0",
     "react-datasheet-grid": "^4.11.5",
     "react-doc-viewer": "^0.1.14",
     "react-dom": "^18.3.1",
     "react-fast-marquee": "^1.6.5",
+    "react-markdown": "^9.*",
     "react-pro-sidebar": "^1.1.0",
+    "react-quilljs": "^2.0.5",
     "react-router-dom": "^7.1.3",
     "react-select": "^5.10.0",
     "react-tabs": "^6.1.0",
+    "remark-gfm": "^4.0.1",
     "srpv-js": "^1.0.16",
     "tailwindcss": "^3.4.17"
   },
@@ -49,13 +57,13 @@
     "@eslint/js": "^9.17.0",
     "@types/react": "^18.3.18",
     "@types/react-dom": "^18.3.5",
-    "@vitejs/plugin-react": "^4.3.4",
     "eslint": "^9.17.0",
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-refresh": "^0.4.16",
     "globals": "^15.14.0",
     "typescript": "~5.6.2",
     "typescript-eslint": "^8.18.2",
-    "vite": "^6.0.5"
+    "vite": "^6.0.5",
+    "@vitejs/plugin-react": "*"
   }
 }
