--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-VITE_SERVER_ADDRESS = https://api.sharesyllabus.me
+VITE_SERVER_ADDRESS = https://sharesyllabus.leowen.me
 #VITE_SERVER_ADDRESS = http://localhost:4000
